iRedMail-0.9.0-beta1:
    * Improvement:
        - Nginx support available on all Linux/BSD distributions.
        - MariaDB support is now available on FreeBSD.
        - New index in `amavisd` database for SQL column `policy.policy_name`.
          Required by iRedAdmin-Pro self-service.

    * Fixed:
        - Set 'receive_override_options=no_address_mappings' in Postfix to
          disable address mappings before content filter (Amavisd, in our
          case), and remove 'no_address_mappings' in Postfix master.cf defined
          for transport '127.0.0.1:10025'.
          Important note: you should comment out
          'receive_override_options=no_address_mappings' in Postfix if you
          don't have a content filter.
        - Not enable cron job to update SpamAssassin rules in file
          /etc/default/spamassassin (CRON=1).
        - Incorrect quota dict name in Dovecot quota warning script.
        - Decrease number of pre-forked Amavisd processes to 4 to reduce
          memory usage.
        - Add missing SQL column (mailbox.enableindexer-worker) and LDAP
          attribute/value pair: enabledService=indexer-worker. Required by
          Dovecot.
          Thanks dwbotsch <botsch _at_ cnf.cornell.edu> for the report.

    * Updated packages:
        + Roundcube webmail -> 1.0.2

iRedMail-0.8.7:
    * Works on new Linux/BSD distribution releases:
        + Ubuntu 14.04 LTS. With MariaDB support.
        + OpenBSD 5.5

    * Drop support for below releases:
        - Ubuntu 13.04, 13.10
        - OpenBSD 5.4

    * Increase default Amavisd prefork children to 10 (default is 2).
    * Allows sasl authentication ONLY over a TLS-encrypted smtp connection.
    * Enable LMTP service in Dovecot by default.
      To use LMTP instead of Dovecot LDA as per-domain or per-user local
      deliver agent in Postfix, you need to use one of below:
        - LMTP socket: lmtp:unix:private/dovecot-lmtp
        - LMTP inet listener: lmtp:inet:127.0.0.1:24
