@@ -85,8 +85,6 @@ check_env
 . ${CONF_DIR}/clamav
 . ${CONF_DIR}/spamassassin
 . ${CONF_DIR}/roundcube
-. ${CONF_DIR}/phpmyadmin
-. ${CONF_DIR}/phppgadmin
 . ${CONF_DIR}/awstats
 . ${CONF_DIR}/fail2ban
 . ${CONF_DIR}/iredadmin
@@ -122,8 +120,6 @@ fi
 . ${FUNCTIONS_DIR}/spamassassin.sh
 . ${FUNCTIONS_DIR}/roundcubemail.sh
 . ${FUNCTIONS_DIR}/phpldapadmin.sh
-. ${FUNCTIONS_DIR}/phpmyadmin.sh
-. ${FUNCTIONS_DIR}/phppgadmin.sh
 . ${FUNCTIONS_DIR}/awstats.sh
 . ${FUNCTIONS_DIR}/fail2ban.sh
 . ${FUNCTIONS_DIR}/iredadmin.sh
