@@ -1,6 +1,4 @@
 b6b6696e3f94244c5b007d53083c0f13  misc/iRedAdmin-0.3.3.tar.bz2
 59a49054039ceb852c2da377d8742360  misc/phpldapadmin-1.2.3.tgz
-2172407367c215640d5bb39271471fc3  misc/phpMyAdmin-4.2.0-all-languages.tar.bz2
 3e2389b226f28fbe18a8e9049bdcb2d8  misc/iRedAPD-1.4.3.tar.bz2
-ad8f05cef0c443d9ce2940bf36319c24  misc/phpPgAdmin-5.1.tar.bz2
 5028c6f9fa88d0c84b0fde0b84355203  misc/roundcubemail-1.0.2.tar.gz
