@@ -79,32 +79,6 @@ server {
         index index.php;
     }
 
-    # phpMyAdmin
-    location ~ /phpmyadmin(.*)\.php$ {
-        include fastcgi_params;
-        fastcgi_pass php_workers;
-        fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME PH_PHPMYADMIN_HTTPD_ROOT_SYMBOL_LINK$1.php;
-    }
-
-    location ~ /phpmyadmin(.*) {
-        alias PH_PHPMYADMIN_HTTPD_ROOT_SYMBOL_LINK$1;
-        index index.php;
-    }
-
-    # phpPgAdmin
-    location ~ /phppgadmin(.*)\.php$ {
-        include fastcgi_params;
-        fastcgi_pass php_workers;
-        fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME PH_PHPPGADMIN_HTTPD_ROOT_SYMBOL_LINK$1.php;
-    }
-
-    location ~ /phppgadmin(.*) {
-        alias PH_PHPPGADMIN_HTTPD_ROOT_SYMBOL_LINK$1;
-        index index.php;
-    }
-
     # Normal PHP scripts
     location ~ \.php$ {
         include fastcgi_params;
